# capture-forge

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Oxichrome.md  README.md
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/: brainstorming-session-2026-06-19-104754.md
_bmad-output/implementation-artifacts/: 1-1-error-system-state-machine-foundation.md  1-2-stream-acquisition-screen-tab-mic.md  1-3-recording-lifecycle-start-stop-pause-resume-cancel.md  1-4-chunk-writer-foundation.md  1-5-webm-export-pipeline.md  1-6-countdown-recorder-status-bar.md  1-8-crash-recovery-detection-restore.md  1-9-heartbeat-keepalive.md  deferred-work.md  sprint-status.yaml
_bmad-output/implementation-artifacts/stories/: 1-7-preview-page-play-download-delete.md
_bmad-output/planning-artifacts/: architecture.md  implementation-readiness-report-2026-06-19.md
_bmad-output/planning-artifacts/research/: domain-browser-extensions-for-screen-recording-and-video-capture-research-2026-06-19.md  market-screen-recording-browser-extensions-research-2026-06-19.md  technical-capture-persistence-architecture-2026-06-19.md  (+1 more)
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: architect.md  audience-lens-architecture.md  brainstorming.md  prd.md  product-brief.md  sprint-stories-resilient-storage.md  ux-designer.md
js/: chrome_shim.js
src/: chunk.rs  countdown.rs  export.rs  lib.rs  lifecycle.rs  messaging.rs  preview.rs  recorder.rs  recovery.rs  recovery_toast.rs  status_bar.rs  stream.rs
(+11 files in other folders)
