[package]
name = "capture-forge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxichrome = { version = "0.1" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamAudioSourceNode",
    "MediaStreamAudioDestinationNode",
    "MediaStreamConstraints",
    "DisplayMediaStreamConstraints",
    "MediaDevices",
    "Navigator",
    "Window",
    "AudioNode",
    "AudioContextState",
    # Story 1.3 — MediaRecorder lifecycle
    "MediaRecorder",
    "MediaRecorderOptions",
    "Blob",
    "BlobEvent",
    "Event",
    # Story 1.6 — Countdown & RecorderStatusBar
    "Document",
    "Element",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "KeyboardEvent",
    "HtmlElement",
    "HtmlSpanElement",
    "Node",
    "Performance",
    # Story 1.7 — Preview page
    "HtmlVideoElement",
    "Url",
    "HtmlButtonElement",
    # Story 1.8 — Crash recovery (OPFS enumeration)
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemEntry",
    "FileSystemFlags",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
serde_json = "1"
wasm-bindgen-test = "0.3"
